--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,65 +7,86 @@
     android:background="@drawable/gradient_background"
     tools:context=".ProfilePageActivity">
 
-    <TextView
-        android:id="@+id/textView4"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Profile"
-        android:textAlignment="center"
-        android:textColor="@color/lightBlue"
-        android:textSize="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/lightBlue"
+            android:textSize="32sp"
+            android:translationY="25dp" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:translationY="35dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <include layout="@layout/personal_info_item"/>
+            </LinearLayout>
 
 
 
-
-    <Button
-        android:id="@+id/ride_history_button"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/startColor"
-        android:text="Ride History"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.656" />
-
-    <Button
-        android:id="@+id/back_button_profilePageActivity"
-        android:layout_width="300sp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/startColor"
-        android:text="Back"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ride_history_button"
-        app:layout_constraintVertical_bias="0.418" />
-
-    <Button
-        android:id="@+id/sign_out_button_profilePage"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/black"
-        android:text="Sign Out"
-        app:cornerRadius="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_button_profilePageActivity"
-        app:layout_constraintVertical_bias="0.68" />
+        </ScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:translationY="50dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <include layout="@layout/phone_item" />
+                <include layout="@layout/email_item" />
+
+            </LinearLayout>
+
+
+        </ScrollView>
+
+
+        <Button
+            android:id="@+id/ride_history_button"
+            android:layout_width="299dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/startColor"
+            android:text="Ride History"
+            app:cornerRadius="20dp"
+            android:layout_gravity="center"
+            android:translationY="60dp"/>
+
+        <Button
+            android:id="@+id/back_button_profilePageActivity"
+            android:layout_width="300sp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/startColor"
+            android:text="Back"
+            app:cornerRadius="20dp"
+            android:layout_gravity="center"
+            android:translationY="110dp"/>
+
+        <Button
+            android:id="@+id/sign_out_button_profilePage"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/black"
+            android:text="Sign Out"
+            android:translationY="125dp"
+            app:cornerRadius="20dp" />
+
+    </LinearLayout>
+</LinearLayout>
