--- a/app/src/main/res/layout/personal_info_item.xml
+++ b/app/src/main/res/layout/personal_info_item.xml
@@ -37,8 +37,7 @@
                 android:id="@+id/uid_profilePage"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textSize="20sp"
-                android:textColor="@color/black"/>
+                android:textSize="15sp"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"/>
