--- a/app/src/main/res/layout/activity_ride_history.xml
+++ b/app/src/main/res/layout/activity_ride_history.xml
@@ -7,7 +7,6 @@
     android:background="@drawable/gradient_background"
     tools:context=".RideHistoryActivity"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
@@ -16,13 +15,13 @@
         android:textAlignment="center"
         android:textColor="@color/lightBlue"
         android:textSize="32sp"
-        android:translationY="40dp"/>
+        android:layout_marginTop="40dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:translationY="60dp"
+        android:translationY="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
@@ -72,24 +71,39 @@
 
     </LinearLayout>
 
+    <!-- ScrollView for the ride history entries -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-
-
+        <!-- LinearLayout to hold the dynamic ride history entries -->
+        <LinearLayout
+            android:id="@+id/rideHistoryLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <!-- Dynamic content will be added here -->
+        </LinearLayout>
     </ScrollView>
-
 
     <Button
         android:id="@+id/back_button_rideHistoryActivity"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/startColor"
         android:text="Back"
         app:cornerRadius="20dp"
-        android:translationY="600dp"
-        android:translationX="50dp"/>
-
+        android:layout_marginBottom="20dp"/>
 
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+
