--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -77,7 +77,8 @@
                 android:textColor="@color/white"
                 android:layout_marginTop="8dp"
                 android:backgroundTint="@color/startColor"
-                app:cornerRadius = "20dp"/>
+                app:cornerRadius = "20dp"
+                android:drawableLeft="@drawable/ic_google_tile"/>
 
             <TextView
                 android:layout_width="wrap_content"
